@@ -95,8 +95,8 @@ test {
     ]
 }
 */
-test{
-    failOnNoDiscoveredTests=false
+test {
+    failOnNoDiscoveredTests = false
     dependsOn rootProject.tasks.named("copyToLib")
 }
 run {
@@ -113,7 +113,10 @@ run {
 //                 "-XX:+UnlockExperimentalVMOptions","-XX:-ReduceInitialCardMarks",
                  "--add-opens", "java.base/java.lang=KiCadLogicalSchemeSimulator.simulator",
                  "--enable-native-access=com.formdev.flatlaf",
+                 "--sun-misc-unsafe-memory-access=allow",
                  "-Xms64m",
+                 "-Dsun.java2d.uiScale=2",
+                 "-XX:+UseCompactObjectHeaders",
                  "-Xmx1g", "-XX:+UseLargePages"
 
     ]
